[gd_scene load_steps=3 format=3 uid="uid://ckm64bicxcvfl"]

[ext_resource type="Script" uid="uid://bo01clx8w2mp3" path="res://Scenes/UI/animated_button_hover.gd" id="1_3pomt"]
[ext_resource type="Script" uid="uid://b2cxrcdwii1f4" path="res://Scenes/Main/PausedMenu/paused_menu.gd" id="1_8cbgd"]

[node name="PausedMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_8cbgd")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
self_modulate = Color(1, 1, 1, 0.117647)
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = 75

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Paused"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="ResumeButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"
script = ExtResource("1_3pomt")

[node name="RestartButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Restart"
script = ExtResource("1_3pomt")

[node name="MenuButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Menu"
script = ExtResource("1_3pomt")

[node name="QuitButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
script = ExtResource("1_3pomt")
